@@ -61,6 +61,7 @@ public:
   explicit OrthogonalProductPolynomialFactory(const DistributionCollection & marginals);
 
   /** Build the Function of the given index */
+  using OrthogonalFunctionFactory::build;
   Function build(const UnsignedInteger index) const;
 
   /** Return the enumerate function that translate unidimensional indices into multidimensional indices */
