@@ -25,7 +25,7 @@ OT_OrthogonalBasis_doc
 // ---------------------------------------------------------------------
 
 %define OT_OrthogonalBasis_build_doc
-"Get the term of the basis collection at a given index.
+"Get the term of the basis collection at a given index or multi-indices.
 
 Parameters
 ----------
@@ -34,11 +34,17 @@ index : int
     *index* is used by a bijection from :math:`\Nset` to :math:`\Nset^d`
     (with :math:`d` the dimension of the basis). The bijection is detailed in
     :class:`~openturns.EnumerateFunction`.
+indices : sequence of int
+    Indicates the term of the basis which must be constructed. In other words,
+    *indices* is used by a bijection from :math:`\Nset^d` to :math:`\Nset`
+    (with :math:`d` the dimension of the basis). The bijection is the inverse of
+    :class:`~openturns.EnumerateFunction`.
 
 Returns
 -------
 function : :class:`~openturns.Function`
-    The term of the basis collection at the index *index*.
+    The term of the basis collection at the index *index* or the inverse of
+    *indices*.
 
 Examples
 --------
@@ -51,6 +57,9 @@ Examples
 -1.11803 + 3.3541 * x0^2
 >>> termBasis = productBasis.build(5)
 >>> print(termBasis.getEvaluation())
+(1.73205 * x0) * (-1 + x1)
+>>> termBasis2 = productBasis.build([1,1,0])
+>>> print(termBasis2.getEvaluation())
 (1.73205 * x0) * (-1 + x1)"
 %enddef
 %feature("docstring") OT::OrthogonalFunctionFactory::build
